syntax = "proto3";

package customer.v1;

option go_package = "customer/internal/presentation/grpc;customerv1";

import "google/protobuf/empty.proto";

//
// CustomerAuthService provides operations for customer authentication.
// API Version: v1
//
service CustomerAuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc VerifyOtp(VerifyOtpRequest) returns (VerifyOtpResponse);

  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (google.protobuf.Empty);

  rpc CompletePasswordReset(CompletePasswordResetRequest) returns (google.protobuf.Empty);
  
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

//
// Message definitions
//

message RegisterRequest {
  string name = 1;
  string password = 2;
  string phone = 3;
}

message RegisterResponse {
  string customer_id = 1;
}

message LoginRequest {
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  string challenge_id = 1;
}

message VerifyOtpRequest {
  string challenge_id = 1;
  string code = 2;
}

message VerifyOtpResponse {
  string token = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message CompletePasswordResetRequest {
  string token = 1;
  string new_password = 2;
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
  string customer_id = 1;
}
